...
"Okay.button.title" = "Okay, I got it";

"f4a-R0-T90.title" = "Bill Total";

"Bill-Total.title" = "Bill";

"Done-Numpad.title" = "Done";

"Quick-Tips.title" = "Quick Tips";

"Bill-Summary.title" = "Bill summary";

"Per-person.title" = "Per person";

"Tip-Total.title" = "Tip";
...
